syntax = "proto3";

option go_package = "github.com/wyy-go/wzo/examples/proto/errapi";

package proto.errapi;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/hello/{name}"
    };
  }
  rpc TestError(ErrorRequest) returns (ErrorReply) {
    option (google.api.http) = {
      get: "/error/{name}"
    };
  }
}

message HelloRequest {
  string name = 1 [(gogoproto.moretags) = 'uri:"name"'];
}

message HelloReply {
  string message = 1;
}

message ErrorRequest {
  string name = 1 [(gogoproto.moretags) = 'uri:"name"'];
}

message ErrorReply {
  string message = 1;
}

